# project_x_voice

./: README.md  README_backup.md  config.yaml  debug.py  debug_dataset.py  path_manager.py  project_journal.md  project_structure.txt  pyproject.toml  requirements.txt  setup.cfg
config/: config.json  phonemes.json
data/: durations.json  metadata.csv
project_x_voice/: augment.py  bilingual_tts.py  check_and_run.sh  collate_fn.py  data_processor.py  model.py  train.py  validation.py  vocab.py
scripts/: __init__.py  audio_utils.py  augment.py  bilingual_tts.py  check_and_run.sh  collate_fn.py  data_processor.py  model.py  synthesis.py  train.py  validation.py  vocab.py
src/data/: validation.py
src/project_x_voice/: audio_utils.py  data_processor.py
src/project_x_voice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/project_x_voice/config/: config.json  phonemes.json
src/project_x_voice/models/: __init__.py  bilingual_tts.py
src/synthesis/: synthesize.py
vocoder/: utils.py
