[metadata]
name = project_x_voice
version = 0.1
description = Bilingual Text-to-Speech System
author = Your Name

[options]
package_dir = 
    = src
packages = find_namespace:
include_package_data = True
install_requires =
    torch>=2.0
    pandas>=2.0
    phonemizer>=3.3
    numpy>=1.24

[options.packages.find]
include =
    project_x_voice*
    project_x_voice.config*
    project_x_voice.models*
    project_x_voice.data*

[options.package_data]
project_x_voice.config =
    *.json